# docs/swagger.json
@@ -140,6 +140,12 @@
                             "$ref": "#/definitions/handler.errorResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -254,6 +260,23 @@
         "pb.GenerateTokenResponse": {
             "type": "object",
             "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "pb.UpdateEmailVerificationTokenRequest": {
+            "type": "object",
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
                 "token": {
                     "type": "string"
                 }
